--- a/site/static/admin/config.yml
+++ b/site/static/admin/config.yml
@@ -12,10 +12,12 @@ collections: # A list of collections the CMS should be able to edit
     fields: # The fields each document in this collection have
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Publish Date", name: "date", widget: "datetime"}
+      - {label: "Tags", name: "tags", widget: "list"}
+      - {label: "Thumbnail Image", name: "image", widget: "image"}
+      - {label: "Thumbnail Video", name: "thumbnailVideo", widget: "string"}
       - {label: "Intro Blurb", name: "description", widget: "text"}
       - {label: "Body Section", name: "sections", widget: "text"}
-      # - {label: "Image", name: "image", widget: "image", required: false}
-      # - {label: "Body", name: "body", widget: "markdown"}
+      - {label: "Gallery", name: "carousel", widget: "list"}
   - name: "pages"
     label: "Pages"
     files:
