--- a/site/static/admin/config.yml
+++ b/site/static/admin/config.yml
@@ -16,8 +16,18 @@ collections: # A list of collections the CMS should be able to edit
       - {label: "Thumbnail Image", name: "image", widget: "image"}
       - {label: "Thumbnail Video", name: "thumbnailVideo", widget: "string"}
       - {label: "Intro Blurb", name: "description", widget: "text"}
-      - {label: "Body Section", name: "sections", widget: "text"}
-      - {label: "Gallery", name: "carousel", widget: "list"}
+      - label: Body section
+        name: sections
+        widget: list
+        fields:
+          - {label: "Sub title", name: "subtitle", widget: "string"}
+          - {label: "Copy", name: "copy", widget: "text"}
+      - label: Gallery
+        name: carousel
+        widget: list
+        fields:
+          - {label: "Image", name: "image", widget: "image"}
+          - {label: "Alt text", name: "alt", widget: "string"}
   - name: "pages"
     label: "Pages"
     files:
