--- a/site/static/admin/config.yml
+++ b/site/static/admin/config.yml
@@ -1,6 +1,9 @@
 backend:
   name: git-gateway
 
+display_url: https://vigorous-mahavira-319660.netlify.app/
+logo_url: https://your-site.com/img/baked-logo.svg
+
 media_folder: "site/static/img" # Folder where user uploaded files should go
 public_folder: "img"
 
@@ -44,7 +47,7 @@ collections: # A list of collections the CMS should be able to edit
       - {label: "Note", name: "note", widget: "string"}
       - {label: Body, name: body, widget: markdown}
   - name: "pages"
-    label: "Pages"
+    label: "Main Pages"
     files:
       - file: "site/content/_index.md"
         label: "Home Page"
@@ -141,3 +144,10 @@ collections: # A list of collections the CMS should be able to edit
           - {label: Youtube, name: youtube, widget: string}
           - {label: Dribbble, name: dribbble, widget: string}
           - {label: Twitter, name: twitter, widget: string}
+  - name: "basic-pages"
+    label: "Basic Pages"
+    folder: "site/content"
+    create: true
+    fields:
+      - {label: "Title", name: "title", widget: "string"}
+      - {label: Body, name: body, widget: markdown}
