--- a/site/static/admin/config.yml
+++ b/site/static/admin/config.yml
@@ -2,7 +2,7 @@ backend:
   name: git-gateway
 
 display_url: https://vigorous-mahavira-319660.netlify.app/
-logo_url: https://your-site.com/img/baked-logo.svg
+logo_url: https://vigorous-mahavira-319660.netlify.app/img/baked-logo.svg
 
 media_folder: "site/static/img" # Folder where user uploaded files should go
 public_folder: "img"
