dans feedback fixes

--- a/site/data/settings/footer.yml
+++ b/site/data/settings/footer.yml
@@ -12,3 +12,4 @@ spotify: 'https://open.spotify.com/user/e94lblworgg9ogus8wk7zob9z?si=5111737c44b
 youtube: ''
 dribbble: ''
 twitter: ''
+creativeBrief: 'http://www.creativebrief.com/agency/baked'
