trying to fix meta description in cms

--- a/site/static/admin/config.yml
+++ b/site/static/admin/config.yml
@@ -166,8 +166,11 @@ collections:
         name: "config"
         fields:
           - {label: "Title", name: "title", widget: "string"}
-          - {label: "Meta Description", name: "description", widget: "text"}
-
+          - label: "Meta Data"
+            name: "params"
+            widget: "list"
+            fields:
+              - {label: "Meta Description", name: "description", widget: "text"}
   - name: "basic-pages"
     label: "Basic Pages"
     folder: "site/content"
