--- a/site/static/admin/config.yml
+++ b/site/static/admin/config.yml
@@ -168,7 +168,7 @@ collections:
           - {label: "Title", name: "title", widget: "string"}
           - label: "Meta Data"
             name: "params"
-            widget: "list"
+            widget: "object"
             fields:
               - {label: "Meta Description", name: "description", widget: "text"}
   - name: "basic-pages"
