--- a/site/static/admin/config.yml
+++ b/site/static/admin/config.yml
@@ -28,7 +28,7 @@ collections:
       - {label: "Tags", name: "tags", widget: "list"}
       - {label: "Thumbnail Image", name: "image", widget: "image"}
       - {label: "Thumbnail Video", name: "thumbnailVideo", widget: "file", required: false}
-      - {label: "Intro Blurb", name: "intro", widget: "text", required: "false"}
+      - {label: "Intro Blurb", name: "intro", widget: "text", required: false}
       - label: "Body section"
         name: "sections"
         widget: "list"
