fixed yaml sytax error

--- a/site/static/admin/config.yml
+++ b/site/static/admin/config.yml
@@ -29,8 +29,7 @@ collections:
         name: "tags"
         widget: "list"
         create: true
-        field:
-          - {widget: "string"}
+        field: {name: "tag", widget: "string"}
       - {label: "Thumbnail Image", name: "image", widget: "image"}
       - {label: "Thumbnail Video", name: "thumbnailVideo", widget: "file", required: false}
       - {label: "Intro Blurb", name: "intro", widget: "text", required: false}
