--- a/site/static/admin/config.yml
+++ b/site/static/admin/config.yml
@@ -13,7 +13,7 @@ public_folder: "img"
 slug:
   encoding: "ascii"
   clean_accents: true
-  sanitize_replacement: "_"
+  sanitize_replacement: "-"
 
 collections:
   - name: "work"
